--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
 		"babelify": "^7.3.0",
 		"body-parser": "^1.15.2",
 		"browserify": "^13.1.1",
+		"chai": "4.2.0",
 		"classnames": "^2.2.5",
 		"co": "^4.6.0",
 		"codemirror": "^5.22.0",
 		"crypto": "0.0.3",
+		"ejs": "^2.6.1",
 		"errorify": "^0.3.1",
 		"express": "^4.14.0",
+		"mocha": "6.0.2",
 		"react": "^15.4.1",
 		"react-codemirror": "^0.3.0",
 		"react-dom": "^15.4.1",
